fix Right shift

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -69,8 +69,6 @@ tr:nth-child(even) {
 
 .svg-content {
     display: inline-block;
-    position: absolute;
-    transform: translate(300px, 300px);
     top: 0;
     left: 0;
 }
